--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,19 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Swift API Guidelines
+email: swift-dev@lists.swift.org
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Official guidelines for Swift API design.
+timezone: America/Los_Angeles
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: SwiftLang
+# github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+
+kramdown:
+    syntax_highlighter: rouge
+
