--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 timezone: America/Los_Angeles
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: SwiftLang
+# twitter_username: SwiftLang
 # github_username:  jekyll
 
 # Build settings
