--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Swift API Guidelines
+title: Swift Internals
 email: swift-dev@lists.swift.org
 description: > # this means to ignore newlines until "baseurl:"
   Official guidelines for Swift API design.
 timezone: America/Los_Angeles
-baseurl: "/swift-api-guidelines"
-url: "http://dabrahams.github.io" # the base hostname & protocol for your site
+baseurl: "/swift-internals"
+url: "http://apple.github.io"
+
+exclude: [config.ru, Gemfile, Gemfile.lock, Procfile, vendor, api-guidelines/api-design-guidelines.md ]
+
 # twitter_username: SwiftLang
 # github_username:  jekyll
 
@@ -27,3 +30,12 @@ sass:
     sass_dir: _sass
 
 
+defaults:
+  -
+    scope:
+      path: ""
+      type: pages
+    values:
+      official_site: http://apple.github.io
+      official_url: ""
+      include_in_navigation: true
